# llmango

./: .editorconfig  .env.example  .gitignore  Justfile  LICENSE  README.md  pyproject.toml
data/normalization/001_favorite_fruit/: mapping.yaml
prompts/001_favorite_fruit/: meta.yaml  normalize.md
prompts/favorite_fruit/: en.md  meta.yaml  pl.md
src/llmango/: __init__.py  analyze.py  cli.py  config.py  lang_detect.py  manifest.py  normalize.py  questions.py  registry.py  runner.py  schemas.py  storage.py
src/llmango/backends/: __init__.py  base.py  openai_backend.py  openai_batch.py
src/llmango/experiments/: __init__.py  favorite_fruit.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_config.py  test_manifest.py  test_normalize.py  test_openai_backend.py  test_openai_batch.py  test_pipeline_e2e.py  test_questions.py  test_registry.py  test_runner.py  test_smoke.py  test_storage.py
