[project]
name = "llmango"
version = "0.1.0"
description = "Probing how LLM behavior shifts across languages, one question at a time."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Rafal Kwiecien", email = "dev@rafalkwiecien.com" }]
keywords = ["llm", "multilingual", "evaluation", "structured-outputs", "openai", "vllm"]

dependencies = [
    "openai",
    "pydantic>=2.7",
    "polars",
    "pyarrow",
    "pyyaml",
    "typer",
    "python-dotenv",
    "huggingface_hub",
    "lingua-language-detector",
]

[project.optional-dependencies]
# GPU-only backend, not installed on Windows.
#   uv sync --extra gpu
gpu = ["vllm"]
# Developer tooling.
#   uv sync --extra dev
dev = [
    "ruff>=0.6",
    "pyright>=1.1.375",
    "pytest>=8.0",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmango"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import sorting, UP pyupgrade, B bugbear,
# SIM simplify, N naming.
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
